# CPP-Four-Ferrets

./: .clang-format  .clang-tidy  .cppcheck  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
.natvis/: gsl.natvis  mutex.natvis  rapidjson.natvis  ryml.natvis
app/ASGEGame/: CMakeLists.txt  main.cpp
app/ASGEGame/data/images/collectables/: Sources.txt
app/ASGEGame/data/map/: Default.tmx  Level1.tmx  Level2.tmx  Level3.tmx
app/ASGEGame/data/map/backup/: Level1.tmx  Level2.tmx  Level3.tmx
app/ASGEGame/gameobjects/characters/: CharacterBase.cpp  CharacterBase.hpp  NonPlayerCharacter.cpp  NonPlayerCharacter.hpp  PlayerCharacter.cpp  PlayerCharacter.hpp
app/ASGEGame/gameobjects/characters/nonplayercharacters/: Civilian.cpp  Civilian.hpp  Guard.cpp  Guard.hpp
app/ASGEGame/gameobjects/characters/playercharacters/: Bruiser.cpp  Bruiser.hpp  Hacker.cpp  Hacker.hpp  Marksman.cpp  Marksman.hpp  Thief.cpp  Thief.hpp
app/ASGEGame/gameobjects/managers/: MusicManager.cpp  MusicManager.h
app/ASGEGame/gameobjects/mapstuff/: IHackable.hpp  IInteractable.hpp  IKeyUnlockable.hpp  IPickable.hpp  MapManager.cpp  MapManager.hpp  MapObject.cpp  MapObject.hpp
app/ASGEGame/gameobjects/mapstuff/alarm/: Alarm.cpp  Alarm.hpp  AlarmManager.cpp  AlarmManager.hpp
app/ASGEGame/gameobjects/mapstuff/bush/: Bush.cpp  Bush.hpp
app/ASGEGame/gameobjects/mapstuff/camera/: SecurityCamera.cpp  SecurityCamera.hpp
app/ASGEGame/gameobjects/mapstuff/collectables/: CollectableBase.cpp  CollectableBase.hpp  PickupableCollectable.cpp  PickupableCollectable.hpp
app/ASGEGame/gameobjects/mapstuff/collectables/consumables/: MedKit.cpp  MedKit.hpp  MissionObjectiveObject.cpp  MissionObjectiveObject.hpp
app/ASGEGame/gameobjects/mapstuff/collectables/key/: Key.cpp  Key.hpp
app/ASGEGame/gameobjects/mapstuff/collectables/weapons/: Pistol.cpp  Pistol.hpp  Rifle.cpp  Rifle.hpp  WeaponBase.cpp  WeaponBase.hpp
app/ASGEGame/gameobjects/mapstuff/computer/: ComputerTerminal.cpp  ComputerTerminal.hpp
app/ASGEGame/gameobjects/mapstuff/doors/: AutomaticDoor.cpp  AutomaticDoor.hpp  DoorBase.cpp  DoorBase.hpp  LockedDoor.cpp  LockedDoor.hpp  ManualDoor.cpp  ManualDoor.hpp
app/ASGEGame/gameobjects/mapstuff/endpoint/: EndPoint.cpp  EndPoint.hpp
app/ASGEGame/gameobjects/mapstuff/tripwire/: TripWire.cpp  TripWire.hpp
app/ASGEGame/gameobjects/mapstuff/vent/: Vent.cpp  Vent.hpp
app/ASGEGame/gameobjects/misc/: Timer.cpp  Timer.hpp
app/ASGEGame/gameobjects/projectiles/: Bullet.cpp  Bullet.hpp  KnockOutDart.cpp  KnockOutDart.hpp  ProjectileBase.cpp  ProjectileBase.hpp
app/ASGEGame/helper/: ZOrderData.hpp
app/ASGEGame/scenes/: CharacterSelectScene.cpp  CharacterSelectScene.hpp  EndOfLevelScene.cpp  EndOfLevelScene.hpp  GameData.cpp  GameData.hpp  GameScene.cpp  GameScene.hpp  LevelSelectScene.cpp  LevelSelectScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp
app/ASGEGame/scenes/levels/: Level1.cpp  Level1.hpp  Level2.cpp  Level2.hpp  Level3.cpp  Level3.hpp  LevelBase.cpp  LevelBase.hpp
cmake/: submodule.cmake
include/ASGEGameLib/: Component.hpp  Driver.hpp  HelperMethods.hpp  Scene.hpp
include/ASGEGameLib/components/animator/: Animator.hpp
include/ASGEGameLib/components/camera/: Camera.hpp  HUD.hpp
include/ASGEGameLib/components/collision/: Collider.hpp  HitResult.hpp  Raycast.hpp
include/ASGEGameLib/components/gamepad/: GamePad.hpp
include/ASGEGameLib/components/map/: TileSquare.hpp
include/ASGEGameLib/components/persistence/: FileStream.hpp
include/ASGEGameLib/components/player/: CharacterPicker.hpp  NamePicker.hpp
include/ASGEGameLib/components/tilemap/: PathFinder.hpp  StringBasedTileMap.hpp  TiledBasedTileMap.hpp
include/ASGEGameLib/components/ui/: GamePadInputUI.hpp
include/ASGEGameLib/containers/: Float4.hpp  Vector2.hpp
include/ASGEGameLib/handlers/: AudioHandler.hpp  CollisionHandler.hpp  InputHandler.hpp  RenderHandler.hpp  SceneHandler.hpp  ThreadHandler.hpp
src/: CMakeLists.txt
src/ASGEGameLib/: Component.cpp  Driver.cpp  HelperMethods.cpp  Scene.cpp
src/ASGEGameLib/components/animator/: Animator.cpp
src/ASGEGameLib/components/camera/: Camera.cpp  HUD.cpp
src/ASGEGameLib/components/collision/: Collider.cpp  HitResult.cpp  Raycast.cpp
src/ASGEGameLib/components/gamepad/: GamePad.cpp
src/ASGEGameLib/components/map/: TileSquare.cpp
src/ASGEGameLib/components/persistence/: FileStream.cpp
src/ASGEGameLib/components/player/: CharacterPicker.cpp  NamePicker.cpp
src/ASGEGameLib/components/tilemap/: PathFinder.cpp  StringBasedTileMap.cpp  TiledBasedTileMap.cpp
src/ASGEGameLib/components/ui/: GamePadInputUI.cpp
src/ASGEGameLib/containers/: Float4.cpp  Vector2.cpp
src/ASGEGameLib/handlers/: AudioHandler.cpp  CollisionHandler.cpp  InputHandler.cpp  RenderHandler.cpp  SceneHandler.cpp  ThreadHandler.cpp
